# hydrabrain

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTEXT-MEMORY.md  INSTALL_FOR_AGENTS.md  Makefile  README.md  README.upstream.md  TODOS.md  VERSION  hydrabrain.plugin.json  hydrabrain.yml  llms-full.txt  llms.txt  package.json  pyproject.toml  requirements.txt
bench/: architecture.py  auto_h2h.py  blog.html  dataset.py  gbrain_stack.py  hardcases.py  headtohead.py  headtohead_results.json  launch-kit.html  lme_report.py  lme_scale.py  lme_scale_results.json  longmemeval.py  longmemeval_report.html  multihop.html  relational.py  relational_results.json  relational_v2.py  report.html  report.py  run_bench.py  temporal.py
demos/: combine_recording.py  cron-playbook.html  record_demo.py  record_user_comparison.py  user_use_cases.py
demos/hydrabrain-video/: README.md  index.html  meta.json  package.json  script.txt
demos/recording/: comparison_frames.txt  comparison_manifest.json  concat.txt  frames.txt  manifest.json  web_frames.txt
demos/sample-notes/: meeting-notes.md  project-alpha.md
docs/: ENGINES.md
docs/eval/: METRIC_GLOSSARY.md
hydrabrain/: cli.py  client.py  config.py  connectors.py  cron.py  doctor.py  engine.py  enrich.py  export.py  jobs.py  llm.py  mcp_server.py  onboarding.py  reports.py  sync.py  synth.py  webapp.py
scripts/: install.sh
src/: schema.sql
test/: connection-resilience.test.ts  embedding-dim-check.test.ts  facts-backstop-gating.test.ts  source-resolver-with-tier.test.ts  worker-lock-renewal-e2e.serial.test.ts
(+59 files in other folders)
